--- a/css/timetable.css
+++ b/css/timetable.css
@@ -100,6 +100,20 @@ html, body {
     box-shadow: 0 20px 30px 0 rgba(192, 142, 238, 0.3);
     transform: scale(1.05);
   }
+  .timetable .accent--gradient {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #5e6567, #30383a);
+    color: #eee;
+    transition: 0.2s ease box-shadow, 0.2s ease transform;
+  }
+  .timetable .accent--gradient:hover {
+    box-shadow: 0 20px 30px 0 rgba(7, 27, 64, 0.532);
+    transform: scale(1.05);
+  }
   .timetable .weekend {
     background: #30383a;
     color: #87a1ad;
